--- a/README.rdoc
+++ b/README.rdoc
@@ -9,3 +9,7 @@ You need
 * rbmediawiki gem (gem install rbmediawiki)
 * An instance of mongoDB running
 * mongo gem (gem install mongo)
+
+== License 
+
+Schrader is licensed under GPLv3 (see LICENSE)
