General makeup. I am happy with this version

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -14,3 +14,9 @@ contributions: Contributions
 whitelist: Add user to Whitelist
 nodiffs: There are not unreviewed Recent Changes. Reload in a few seconds
 unreviewed: "Unreviewed Rcs: "
+revertedFirst: "Someone reverted first on "
+rollbacked: "Reverted "
+"on": on
+whiteisted: " added to the whitelist"
+noRcs: "There are not unreviewed diffs"
+wait: "Wait for it..."
