--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 Schrader is a tool for patrolling MediaWiki projects
 
-== Requeriments
+== Installation
 
 You need 
 * ruby 1.8 and rubygems1.8 (sudo apt-get install ruby1.8 rubygems1.8)
@@ -12,6 +12,12 @@ You need
 to install sqlite3-ruby in Ubuntu you may need to install ruby1.8-dev (sudo apt-get install ruby1.8-dev) otherwise you may get a "No such file to load -- mkmf" error. 
 * sequel (gem install sequel)
 * r18n-desktop (gem install r18n-desktop)
+
+Then, clone the schrader repository:
+
+    git clone git://github.com/IgnacioIcke/schrader.git
+
+Alternatively, you can download a zip package from http://github.com/IgnacioIcke/schrader
 
 == Usage
 
