--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -12,11 +12,12 @@ newmessage: Nuevo mensaje
 talk: Discusión
 contributions: Contribuciones
 whitelist: Añadir usuario a lista blanca
-nodiffs: No hay cambios recientes sin revisar. Recarga en algunos segundos.
-unreviewed: "RCs sin revisar: "
+nodiffs: No hay cambios recientes para revisar. Recarga en algunos segundos.
+unreviewed: "RCs para revisar: "
 revertedFirst: "Alguien revirtió antes en "
 rollbacked: "Revertido "
 "on": en
 whitelisted: " añadido a la lista blanca"
 noRcs: "No hay diffs sin revisar"
 wait: "Wait for it..."
+clean: Limpiar la cola
