summary of rollback changed

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -21,3 +21,4 @@ whiteisted: " added to the whitelist"
 noRcs: "There are not unreviewed diffs"
 wait: "Wait for it..."
 clean: Clean Queue
+using: using
