--- a/README.rdoc
+++ b/README.rdoc
@@ -29,6 +29,8 @@ Alternatively, you can download a zip package from http://github.com/IgnacioIcke
 First, edit config.yml and create userconfig.yml 
 
 * config.yml holds general configuration. Here, user refers to the user in the IRC. You can leave it as "schrader", it is not important. Just be sure that you edit the info regarding your project: channel, site and api.
+
+Languages currently supported are "en", "es" & "ca".
     nick:     schrader
     channel:  "#es.wikipedia"
     server:   browne.wikimedia.org
@@ -36,6 +38,7 @@ First, edit config.yml and create userconfig.yml
     user:     schrader
     site:     "http://es.wikipedia.org"
     api:      "http://es.wikipedia.org/w/api.php"
+    language: en
 
 * userconfig.yml holds configuration critical for the user. This file should now be readable by other people, so make sure you give it appropiate permission.
     user:     Your wiki user
