--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -31,3 +31,5 @@ wikipage: Add from whitelist on the wiki
 clearWL: Empy list
 returnToAction: Return to action
 sure: "You are about to delete the whitelist. Are you sure?"
+patrolled: " patrolled"
+patrol: "Mark as patrolled"
