Users can see previous diff (and previous of the previous ;)

--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -33,3 +33,4 @@ returnToAction: "Tornar a l'acció"
 sure: "Estas a punt d'esborrar la llista blanca. Estas segur?"
 patrolled: " patrullada"
 patrol: "Marcar com a patrullada"
+previous: "Edició anterior"
