--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -33,3 +33,4 @@ returnToAction: Return to action
 sure: "You are about to delete the whitelist. Are you sure?"
 patrolled: " patrolled"
 patrol: "Mark as patrolled"
+previous: "Previous edition"
