--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -33,3 +33,4 @@ returnToAction: Volver a la acción
 sure: "Estás a punto de borrar la lista blanca. ¿Estás seguro?"
 patrolled: " patrullada"
 patrol: "Marcar como patrullada"
+previous: "Edición anterior"
